Update Mail from Python .ipynb
changed my email and password to youremail and youremailpas

--- a/Day 6 Assignment/Mail from Python .ipynb
+++ b/Day 6 Assignment/Mail from Python .ipynb
@@ -116,8 +116,8 @@
     "                               smtp={'host': 'smtp.gmail.com', \n",
     "                                     'timeout': 5,\n",
     "                                    'port':587,\n",
-    "                                    'user':'tirthshah180140111098@gmail.com',\n",
-    "                                    'password':'Dadabhagwan@123',\n",
+    "                                    'user':'youremail',\n",
+    "                                    'password':'youremailpas',\n",
     "                                    'tls':True})"
    ]
   },
